<resources>
    <string name="app_name">IT_Support</string>
    <string name="app_name1">RequestFocus_Dynamic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_frm_dk__dn">frmDK_DN</string>
    <string name="title_activity_frm_dang_nhap">Đăng nhập</string>
    <string name="msg_can_not_connect_to_network">Không có kết nối internet. Vui lòng thử lại.</string>
    <string name="msg_can_not_connect_to_server">Không thể kết nối tới máy chủ.</string>
    <string name="title_activity_frm_dang_ky">Đăng Ký</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_frm_quen_mat_khau">frmQuenMatKhau</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_frm_quen_mk">Quên mật khẩu</string>
    <string name="title_activity_frm_tao_moi_mk">frmTaoMoiMK</string>
    <string name="title_activity_frm_tao_moi_mat_khau">frmTaoMoiMatKhau</string>
    <string name="title_activity_frm_bao_hu">Báo hỏng</string>
    <string name="title_activity_post_adapter">PostAdapter</string>
    <string name="lable_quenmk">Vui lòng nhập email của bạn. Mã xác thực sẽ được gửi đến email này</string>
    <string name="lable_taomk">Vui lòng nhập mã xác thực và mật khẩu mới để khôi phục tài khoản</string>
    <string name="title_activity_child_post">childPost</string>
    <string name="title_activity_frm_child_post">Báo hỏng</string>
    <string name="title_activity_child_post_adapter">ChildPostAdapter</string>
    <string name="title_activity_detail_fragment">DetailFragment</string>
    <string name="title_activity_main22">Main22Activity</string>
    <string name="title_activity_custom_drawer_adapter">CustomDrawerAdapter</string>
    <string name="title_activity_frm_thong_bao">frmThongBao</string>
    <string name="title_activity_frm_tim_kiem">frmTimKiem</string>
    <string name="title_activity_frm_luu_tru">Lưu trữ</string>
    <string name="title_activity_frm_tab_host">frmTabHost</string>
    <string name="title_activity_frm_ghi_chu_khac">Ghi Chú</string>
    <string name="title_checkbox_preference">Hồ sơ cá nhân</string>
    <string name="title_activity_profile">Chỉnh sửa hồ sơ</string>
    <string name ="title_profile1">Hồ sơ cá nhân</string>
    <string name="title_activity_frm_ghi_chu">Ghi chú</string>

    <string name="frmGhiChu_edtNote"><font size="9dp">Viết ghi chú ở đây.(Có thể bỏ trống)</font></string>
    <string name="title_activity_frm_ghi_chu_post">frmGhiChuPost</string>
    <string name="title_activity_load_post_adapter">LoadPostAdapter</string>
    <string name="title_activity_frm_chi_tiet_post">Thông tin chi tiết</string>
    <string name="title_activity_menu__left">Menu_Left</string>
    <string name="title_activity_menu_left">MenuLeft</string>
    <string name="title_activity_item_menu_left_apdapter">ItemMenuLeftApdapter</string>
    <string name="title_activity_frm_provider_bao_hong">frmProviderBaoHong</string>
    <string name="title_activity_provider_bao_hong">ProviderBaoHong</string>
    <string name="hint_passcu">Nhập mật khẩu hiện tại</string>
    <string name="hint_passmoi">Nhập mật khẩu mới</string>
    <string name="hint_cfpassmoi">Xác nhận mật khẩu mới</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_frm_hoan_thanh">Hoàn thành</string>
    <string name="title_activity_search_map">SearchMap</string>
    <string name="multilines">Line1Line1\nLine2Line2</string>

    <string name="nameerror">Họ tên không hợp lệ.</string>
     <string name="Emaillerror">Email đã được đăng ký hoặc chưa đúng định dạng: abc@mail.com.</string>
    <string name="Emailtrong">Không được để trống trường này.</string>
    <string name="passerror">Mật khẩu phải có ít nhất 6 kí tự.</string>
    <string name="cfpasserror">Xác nhận mật khẩu phải trùng khớp với mật khẩu đã đăng ký.</string>
    <string name="phoneerror">Số điện thoại phải có ít nhất 10 kí tự.</string>
    <string name="addresserror">Địa chỉ không được bắt đầu bằng khoảng trắng</string>

    <string name="passmoi">Mật khẩu không hợp lệ.</string>
    <string name="passcu"> Mật khẩu không hợp lệ.</string>
    <string name="cfpassmoi">Xác nhận mật khẩu phải trùng khớp với mật khẩu đã đăng ký.</string>
    <string name="trungpasscu">Mật khẩu mới không được trùng khớp  mật khẩu hiện tại.</string>
    <!--Other-->
    <string name="TitlePopUp">IT Support</string>
    <string name="ValuePopUpOther">Nhập loại thiết bị cần báo hỏng</string>
    <string name="title_activity_detail_pick_post">Thông tin chi tiết</string>
    <string name="title_chiduong">Chỉ dẫn đường đi</string>
    <!--DetailPost-->
    <string name="AcceptPost">Chấp nhận báo hỏng</string>
    <string name="title_activity_list_notification_adapter">ListNotificationAdapter</string>
    <string name="title_activity_load_post_finish">LoadPostFinish</string>
    <string name="title_activity_get_list_post_finish_adapter">GetListPostFinishAdapter</string>
</resources>
