<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=" Thay đổi mật khẩu"
            android:id="@+id/textView"
            android:textColor="@color/mauxanh"
            android:textSize="20dp"
            android:theme="@style/MyEditTextTheme"/>

        <EditText
            android:id="@+id/passcu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_passcu"
            android:inputType="textNoSuggestions|textPassword"
            android:padding="10dp"
            android:theme="@style/MyEditTextTheme"/>
    <TextView
        android:id="@+id/errorpass1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Emailtrong"
        android:visibility="gone"
        android:layout_gravity="left"
        android:textColor="@color/maudo"
        android:textSize="@dimen/matkhau"/>
    <TextView
        android:id="@+id/errorpass2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/passcu"
        android:visibility="gone"
        android:layout_gravity="left"
        android:textColor="@color/maudo"
        android:textSize="@dimen/matkhau"/>
        <EditText
        android:id="@+id/passmoi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_passmoi"

            android:inputType="textNoSuggestions|textPassword"
        android:padding="10dp"
            android:theme="@style/MyEditTextTheme"/>
    <TextView
        android:id="@+id/errorpassmoi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Emailtrong"
        android:visibility="gone"
        android:layout_gravity="left"
        android:textColor="@color/maudo"
        android:textSize="@dimen/matkhau"/>
    <TextView
        android:id="@+id/errorpassmoi2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/passmoi"
        android:visibility="gone"
        android:layout_gravity="left"
        android:textColor="@color/maudo"
        android:textSize="@dimen/matkhau"/>
    <TextView
        android:id="@+id/errorpassmoi3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/trungpasscu"
        android:visibility="gone"
        android:layout_gravity="left"
        android:textColor="@color/maudo"
        android:textSize="@dimen/matkhau"/>
        <EditText
        android:id="@+id/cfpassmoi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cfpassmoi"  android:inputType="textNoSuggestions|textPassword"
        android:padding="10dp" android:theme="@style/MyEditTextTheme"/>
    <TextView
        android:id="@+id/errorcfpassmoi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Emailtrong"
        android:visibility="gone"
        android:layout_gravity="left"
        android:textColor="@color/maudo"
        android:textSize="@dimen/matkhau"/>
    <TextView
        android:id="@+id/errorcfpassmoi2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cfpassmoi"
        android:visibility="gone"
        android:layout_gravity="left"
        android:textColor="@color/maudo"
        android:textSize="@dimen/matkhau"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/dialoghuy"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Hủy"
            android:textAllCaps="false"
            android:background="@color/mauxanh"
            android:textColor="@color/actionbar_text"/>
        <Button
            android:textColor="@color/actionbar_text"
            android:id="@+id/diaglogok"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="OK"
            android:background="@color/mauxam"
            android:enabled="false"
          />
    </LinearLayout>
    </LinearLayout>

