<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    tools:context="com.example.llh_pc.it_support.activities.frmDangKy"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

   >
    <LinearLayout
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="left"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="10dp"
        >

    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/profile_image"
        android:layout_width="@dimen/avatar"
        android:layout_height="@dimen/avatar1"
        android:src="@drawable/avatar"
        android:layout_weight="0.10"
       />

            <TextView
                android:id="@+id/chonanh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chọn ảnh (*)"
                android:gravity="bottom"
                android:textSize="@dimen/chonanh"
                android:layout_marginTop="@dimen/androidmarginchonanh"
                android:layout_marginLeft="0dp"
                android:textColor="@color/mauxam"
                android:visibility="visible"/>


</RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        <EditText
            android:id="@+id/full_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:ems="30"
            android:singleLine="false"
            android:maxLines="1"
            android:inputType="textNoSuggestions|textMultiLine"
            android:hint="Nhập họ và tên (*)"
            android:imeOptions="flagNoFullscreen"
            android:shadowColor="@color/mauxam"
            android:theme="@style/MyEditTextTheme"
            android:maxLength="24"
            android:textSize="@dimen/hoten"

          />
            <TextView
                android:id="@+id/errorname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Emailtrong"
                android:textColor="@color/maudo"
                android:gravity="left"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone"
                android:textSize="@dimen/hoten"/>
            <TextView
                android:id="@+id/errorname1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameerror"
                android:textColor="@color/maudo"
                android:gravity="left"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone"
                android:textSize="@dimen/hoten"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="left"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >
        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="40"
            android:singleLine="false"
            android:maxLines="1"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:hint="Nhập email (*)"
            android:theme="@style/MyEditTextTheme"
            android:maxLength="30"
            android:textSize="@dimen/email"
            />
        <TextView
            android:id="@+id/erroEmail1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Emailtrong"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textColor="@color/maudo"
            android:textSize="@dimen/email"/>
        <TextView
            android:id="@+id/erroEmail2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Emaillerror"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textColor="@color/maudo"
            android:textSize="@dimen/email"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="left"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems = "40"
            android:singleLine="false"
            android:maxLines="1"
            android:inputType="textNoSuggestions|textPassword"
            android:hint="Nhập mật khẩu (*)"
            android:theme="@style/MyEditTextTheme"
            android:maxLength="28"
            android:textSize="@dimen/matkhau"
            />
        <TextView
            android:id="@+id/errorpass1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Emailtrong"
            android:visibility="gone"
            android:layout_gravity="left"
            android:textColor="@color/maudo"
            android:textSize="@dimen/matkhau"/>
        <TextView
            android:id="@+id/errorpass2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/passerror"
            android:visibility="gone"
            android:layout_gravity="left"
            android:textColor="@color/maudo"
            android:textSize="@dimen/matkhau"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="left"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <!--/>-->

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems = "40"
            android:singleLine="false"
            android:maxLines="1"
            android:inputType="textNoSuggestions|textPassword"
            android:hint="Xác nhận mật khẩu (*)"
            android:theme="@style/MyEditTextTheme"
            android:maxLength="28"
            android:textSize="@dimen/nhaplaimapkhau"

            />
        <TextView
            android:id="@+id/cfpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cfpasserror"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textColor="@color/maudo"
            android:textSize="@dimen/nhaplaimapkhau"/>
        <TextView
            android:id="@+id/cfpassword1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Emailtrong"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textColor="@color/maudo"
            android:textSize="@dimen/nhaplaimapkhau"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="left"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >


        <EditText
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems = "40"
            android:singleLine="false"
            android:maxLines="1"
            android:inputType="number"
            android:hint="Nhập số điện thoại (*)"
            android:theme="@style/MyEditTextTheme"
            android:maxLength="25"
            android:textSize="@dimen/phone"
            />
        <TextView
            android:id="@+id/errorphone1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Emailtrong"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textColor="@color/maudo"
            android:textSize="@dimen/phone"/>
        <TextView
            android:id="@+id/errorphone2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/phoneerror"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textColor="@color/maudo"
            android:textSize="@dimen/phone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="left"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:textSize="20dp"-->
        <!--android:textAppearance="?android:actionBarTabTextStyle"-->
        <!--android:text="Địa chỉ:"/>-->
        <EditText
            android:id="@+id/dia_chi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="40"
            android:singleLine="false"
            android:maxLines="2"
            android:inputType="textNoSuggestions|textMultiLine"
            android:hint="Nhập địa chỉ (*)"
            android:theme="@style/MyEditTextTheme"
            android:maxLength="30"
            android:textSize="@dimen/diachi"/>
        <TextView
            android:id="@+id/erroraddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Emailtrong"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textColor="@color/maudo"
            android:textSize="@dimen/diachi"/>
        <TextView
            android:id="@+id/validationaddress1"
            android:layout_marginLeft="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addresserror"
            android:textColor="@color/maudo"
            android:visibility="gone"
            android:textSize="@dimen/diachi"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"

        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:context=".frmDangKy"
                android:text="Loại tài khoản:"
                android:textColor="#000000"
                android:textSize="@dimen/loaitaikhoan"

                />
            <CheckBox
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Người sử dụng"
                android:button="@drawable/check_white"
                android:paddingLeft="5dp"
                android:textSize="@dimen/loaitaikhoan"
                />

            <CheckBox
                android:id="@+id/provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Người cung cấp dịch vụ"
                android:layout_marginLeft="20dp"
                android:button="@drawable/check_white"
                android:paddingLeft="5dp"
                android:textSize="@dimen/loaitaikhoan"
                ></CheckBox>
            <!--<ListView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/list"-->
            <!--android:choiceMode="singleChoice"-->
            <!--android:descendantFocusability="beforeDescendants">-->

            <!--</ListView>-->
            <TextView
                android:id="@+id/chuyenmon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chuyên môn:"
                android:textSize="@dimen/hoten"

                android:visibility="gone"
                android:textColor="@color/mauden"
                />
            <TextView
                android:id="@+id/cbPC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-PC"
                android:visibility="gone"
                android:background="@null"
                android:layout_marginLeft="20dp"
                android:textColor="@color/mauden"
                android:textSize="@dimen/hoten"
                />
            <TextView
                android:id="@+id/cbLaptop"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-Laptop"
                android:visibility="gone"
                android:background="@null"
                android:textSize="@dimen/loaitaikhoan"
                android:textColor="@color/mauden"
                />
            <TextView
                android:id="@+id/cbMayin"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-Máy in"
                android:visibility="gone"
                android:textSize="@dimen/loaitaikhoan"
                android:background="@null"
                android:textColor="@color/mauden"

                />
            <TextView
                android:id="@+id/cbPhoto"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-Máy Photocopy"
                android:visibility="gone"
                android:textSize="@dimen/loaitaikhoan"
                android:background="@null"
                android:textColor="@color/mauden"
                />
            <TextView
                android:id="@+id/cbScan"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-Máy Scan"
                android:visibility="gone"
                android:textSize="@dimen/loaitaikhoan"
                android:background="@null"
                android:textColor="@color/mauden"
                />
            <TextView
                android:id="@+id/cbFax"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-Máy Fax"
                android:visibility="gone"
                android:textSize="@dimen/loaitaikhoan"
                android:background="@null"
                android:textColor="@color/mauden"
                />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/dangkyok"
            android:layout_width="@dimen/bntdangkyokW"
            android:layout_height="@dimen/bntdangkyokH"
            android:text="Đăng ký"
            android:gravity="center"
            android:textSize="@dimen/loaitaikhoan"
            android:textColor="@color/actionbar_text"
            android:background="@color/mauxam"
            android:enabled="false"

            />
    </LinearLayout>
</LinearLayout >
</ScrollView>